Fix spacing

--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -206,7 +206,7 @@ article {
 
 // Disqus thread
 #disqus_thread {
-    margin-top: 1em;
+    margin-top: 1.2em;
 }
 
 // Button that shows comments
@@ -220,6 +220,7 @@ a.button {
     text-decoration: none;
     font-family: 'Roboto Condensed', sans-serif;
     border-radius: 5px;
+    margin-top: 1em;
 
     &:hover {
         color: $dark;
